--- a/MyRedis/Makefile
+++ b/MyRedis/Makefile
@@ -1,5 +1,5 @@
 compile:
-	g++ -Wall -Wextra -O2 -g server.cpp utils.cpp -o server
+	g++ -Wall -Wextra -O2 -g server.cpp hashtable.cpp utils.cpp -o server
 	g++ -Wall -Wextra -O2 -g client.cpp utils.cpp -o client
 
 clean:
